# memora

./: .dockerignore  .env.dev.example  .env.development  .env.gemini.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: COMMUNITY_API.md  COMPLETION_SUMMARY.md  MANUAL_COLLECTION_FEATURES.md  db.py  main.py  memora.db  model.py  pyproject.toml  requirements.txt  router.py  test_manual_collection.py
backend/ai/: PROMPTS.py  openai_provider.py
backend/entity/: response.py  user.py
backend/knowledge_base/: chromadb_mgr.py
backend/llm-gemini/: config.json  gemini_upload.py
backend/routers/: attachment.py  auth.py  category.py  collection.py  community.py  event.py  static.py
backend/scripts/: README.md  clear_collection.py  delete_category.py  delete_collection.py  select_collection_detail.py
backend/utils/: auth.py  markdownit_content.py  text_splitter.py  web_parser.py
frontend/desktop/: README.md  electron-builder.yml  electron.vite.config.mjs  electron.vite.config.ts  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  test.html  tsconfig.node.json  tsconfig.web.json
frontend/desktop/src/main/: index.js  index.ts
frontend/desktop/src/preload/: index.d.ts  index.js  index.ts
frontend/desktop/src/renderer/: index.html
frontend/desktop/src/renderer/src/: App.vue  QuickApp.vue  i18n.ts  main.js  main.ts
frontend/desktop/src/renderer/src/api/: README.md  (+15 more)
frontend/frontend/: README.md  electron-builder.yml  package.json
(+35 files in other folders)
