[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "openai>=1.97.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.1.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.2.3",
    "aiohttp>=3.12.14",
    "loguru>=0.7.3",
    "dotenv>=0.9.9",
    "markitdown-no-magika[docx,pdf,pptx,xls,xlsx]>=0.1.2",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",
    "chromadb>=1.0.15",
]
